# ComfyUI-FirstframeLastframeExtractor

./: .gitignore  README.md  __init__.py  chat_session_history.jsonl  nodes.py  pyproject.toml  requirements.txt  test_node.py
