[project]
name = "comfyui-firstframe-lastframe-extractor"
version = "1.0.2"
description = "Extract the first and last frame from any video file or image batch in ComfyUI."
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "RmaN (Arman Jangmiri)", email = "RmaN.Metaverse@Gmail.com" },
]
keywords = [
    "comfyui",
    "first frame",
    "last frame",
    "firstframe",
    "lastframe",
    "video",
    "frame extractor",
    "first frame last frame",
]
dependencies = [
    "opencv-python-headless>=4.5.0",
    "torch",
    "numpy",
]

[project.urls]
Repository = "https://github.com/RmaNMetaverse/ComfyUI-FirstframeLastframeExtractor"

[tool.comfy]
PublisherId = "rman"
Icon = "https://github.com/RmaNMetaverse/ComfyUI-FirstframeLastframeExtractor/blob/main/icon.png?raw=true"
DisplayName = "First Frame & Last Frame Extractor"
